--- a/Shahin CVV.html
+++ b/Shahin CVV.html
@@ -31,7 +31,7 @@
     <!-- Hero Section -->
     <div class="bg-gradient-to-r from-blue-900 to-white-100 text-white pt-48 pb-32">
         <div class="max-w-6xl mx-auto px-4 text-center">
-            <img src="black-white-car-rain_575980-540.png" class="rounded-full mx-auto mb-8 border-4 border-white w-80 h-80 object-cover hover:scale-105 transition-transform duration-100">
+            <img src="shahin PP 1.jpeg" class="rounded-full mx-auto mb-8 border-4 border-white w-80 h-80 object-cover hover:scale-105 transition-transform duration-100">
             <h1 class="text-4xl font-bold mb-5">SHAHIN KK</h1>
             <p class="text-xl mb-8"><span id="typing-text"></span></p>
             <button class="bg-white text-blue-600 px-6 py-2 rounded-full hover:bg-gray-100 transition transform hover:scale-105 duration-300">Get in Touch</button>
